# hmsportal

./: CMakeLists.txt  docker-compose.yml  employees.db  hms.db  hospital.db  main-light-color-backup  main.cpp  main.cpp-backup  main.cpp-complete-p-d-project  main.cpp-new-project-with-tabs  main.cpp-patient-docker-backup  main.cpp-patient-docker-crud-backup  main.cpp-patient-docker-link-backup
web/: index.html  script.js  style.css
web/js/: main.js
